--- a/app/assets/stylesheets/fonts.css
+++ b/app/assets/stylesheets/fonts.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 body, li, p, a {
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: antialiased;
@@ -24,9 +23,8 @@ body, li, p, a {
   font-family: 'locaweb';
   src: url('/fonts/locaicons/locaweb.eot');
   src: url('/fonts/locaicons/locaweb.eot?#iefix') format('embedded-opentype'),
-       url('/fonts/locaicons/locaweb.woff') format('woff'),
-       url('/fonts/locaicons/locaweb.ttf') format('truetype'),
-       url('/fonts/locaicons/locaweb.svg#locaweb') format('svg');
+       url('/fonts/locaicons/locaweb.ttf') format('truetype');
+       /*url('/fonts/locaicons/locaweb.svg#locaweb') format('svg')url('/fonts/locaicons/locaweb.woff') format('woff')*/
   font-weight: normal; font-style: normal;
 }
 
